Fix text-align for p element

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -307,6 +307,9 @@ body {
   letter-spacing: 0.122727px;
   color: #9e9aa8;
 }
+.statistics__content--wrapper{
+  text-align: center;
+}
 .statistics__content-inner {
   margin-top: 100px;
 }
